--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "npm-watch": "^0.3.0",
-        "vue-router": "^3.0.1",
         "bootstrap": "4.0.0",
         "bootstrap-vue": "1.4.1",
         "chart.js": "2.7.1",
         "flag-icon-css": "2.9.0",
         "font-awesome": "^4.7.0",
+        "npm": "^5.7.1",
+        "npm-watch": "^0.3.0",
         "simple-line-icons": "^2.4.1",
         "vue": "2.5.13",
-        "vue-chartjs": "3.1.0"
+        "vue-chartjs": "3.1.0",
+        "vue-router": "^3.0.1"
     }
 }
